Added Models and controller

--- a/GameStore/Views/Customer/Details.cshtml
+++ b/GameStore/Views/Customer/Details.cshtml
@@ -27,6 +27,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayFor(model => model.Purchases)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Purchases)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.PurchaseDate)
         </dt>
 
