--- a/GameStore/Views/Home/Contact.cshtml
+++ b/GameStore/Views/Home/Contact.cshtml
@@ -5,13 +5,13 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
+    GameShop Ln<br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:GameSupport@example.com">GameSupport@example.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:GameMarket@example.com">GameMarket@example.com</a>
 </address>
