Fixed bugs with filter

--- a/GameStore/Views/Customer/Index.cshtml
+++ b/GameStore/Views/Customer/Index.cshtml
@@ -25,7 +25,7 @@
         <th>
             @Html.ActionLink("Purchase Date", "Index", new {sortOrder = ViewBag.DateSortParm})
         </th>
-        <th></th>
+        <th>Purchase Date</th>
     </tr>
 
 @foreach (var item in Model) {
